--- a/MagicVilla_VillaAPI/appsettings.json
+++ b/MagicVilla_VillaAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultSQLConnection": "Server=localhost;Database=MagicVillaDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultSQLConnection": "Server=localhost;Database=MagicVillaDB;User Id=sa;Password=Kantanka20$;TrustServerCertificate=True;MultipleActiveResultSets=true;"
   }
 }
