implement token generation on login

--- a/MagicVilla_VillaAPI/appsettings.json
+++ b/MagicVilla_VillaAPI/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultSQLConnection": "Server=localhost;Database=MagicVillaDB;User Id=sa;Password=Kantanka20$;TrustServerCertificate=True;MultipleActiveResultSets=true;"
+  },
+  "ApiSettings": {
+    "Secret": "USED TO SIGN AND VERIFY JWTS, REPLACE IT"
   }
 }
