--- a/MagicVilla.Web/MagicVilla.Web.csproj
+++ b/MagicVilla.Web/MagicVilla.Web.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="13.0.1" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0" />
     </ItemGroup>
 
 </Project>
